productinfo/kotlin/service/grpc-productinfo-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc-productinfo-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grpc-productinfo-server
    spec:
      containers:
        - name: grpc-productinfo-server
          image: shehata/grpc-productinfo-server
          resource:
            limits:
              memory: "128Mi"
              cpu: "500m"
            ports:
              - containerPort: 5001
                name: grpc

---
apiVersion: v1
kind: Service
metadata:
  name: productinfo
spec:
  selector:
    app: grpc-productinfo-server
  ports:
    - port: 5001
      targetPort: 5001
      name: grpc
    type: NodePort
